@@ -1,0 +1,3 @@
+#! stap -p1
+
+probe {a,b}.{c,{d,e}}.f! {}
